--- a/index.html
+++ b/index.html
@@ -2371,7 +2371,7 @@
 <span class="red_dye" title="红色染料"></span>
 <span class="ci red_force_of_fire" title="红色火之力"></span>
 </span></td>
-<td>右击烧炼方块成物品。<span style="font-style:itapc;">Fial Forces!</span></td></tr>
+<td>右击烧炼方块成物品，有1/5几率获得1点经验。<span style="font-style:itapc;">Fial Forces!</span></td></tr>
 
 <tr><th><strong id="purple_force_of_life">紫色命之力 (Purple Force of Life)</strong></th><td>紫色染料+钻石+<a href="#spirit_of_life">生命之灵</a></td>
 <td><span class="ui cm" title="合成器">
