--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。该模组无明确的主题，凡是作者认为原版没有而应该有的特性都有可能加入进来。</p>
-<p>最新版本为测试版v1.9-m03d25(魔法更新)，支持Minecraft Java版 1.14快照19w12a+。</p>
+<p>最新版本为测试版v1.9-m03d26(魔法更新)，支持Minecraft Java版 1.14快照19w12a+。</p>
 
 
 <h3 id="download">📦 下载地址</h3>
@@ -74,9 +74,9 @@
 <tbody>
 <tr>
 	<td>Minecraft Java版 19w12a+</td>
-	<td>Crafting++ 1.9测试版m03d25</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m03d25.zip">github</a>
-	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m03d25.zip">官方</a></td>
+	<td>Crafting++ 1.9测试版m03d26</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m03d26.zip">github</a>
+	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m03d26.zip">官方</a></td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/change.log">更新日志</a></td>
 </tr>
 <tr>
@@ -463,11 +463,11 @@
 <img style="height:400px" src="items/screenshots/totem_pillar.png" />
 
 <h3 id="fruit_tree">水果树 (Fruit Tree)</h3>
-<p>天然生成在主世界的地表草方块上。水果树的形状与桦树相同，树干为橡木。</p>
+<p>天然生成在主世界的地表。水果树的形状与桦树相同，树干为橡木。</p>
 <h3 id="ore_tree">矿石树 (Ore Tree)</h3>
-<p>天然生成在主世界的地表草方块上。矿石树的形状与桦树相同，树干为云杉木。</p>
+<p>天然生成在主世界的地表。矿石树的形状与桦树相同，树干为云杉木。</p>
 <h3 id="wool_tree">羊毛树 (Wool Tree)</h3>
-<p>天然生成在主世界的地表草方块上。羊毛树的形状与桦树相同，树干为桦木。</p>
+<p>天然生成在主世界的地表。羊毛树的形状与桦树相同，树干为桦木。</p>
 
 <img style="height:350px" src="items/screenshots/fruit_tree.png" />
 <img style="height:350px" src="items/screenshots/ore_tree.png" />
@@ -483,7 +483,7 @@
 <p>天然生成在针叶林地表，由云杉木和若干云杉树叶构成。</p>
 
 <h3 id="field">农作物 (Field)</h3>
-<p>天然生成在主世界的地表草方块上，为小麦、马铃薯、胡萝卜或甜菜根作物形成的一丛。</p>
+<p>天然生成在主世界的地表，为小麦、马铃薯、胡萝卜或甜菜根作物形成的一丛。</p>
 
 <h3 id="flowers_and_grasses_bushes">花草丛 (Flowers and Grasses Bushes)</h3>
 <p>天然生成在主世界的地表草方块上，为任意一种花草形成的一丛。</p>
@@ -500,7 +500,7 @@
 <h2 id="entities">实体</h2>
 <h3 id="improved_mob">怪物加强</h3>
 <ul>
-<li>僵尸：有更高的几率生成时身穿盔甲、手持武器。同时会破坏遇到的火把。</li>
+<li>僵尸：有更高的几率生成时身穿盔甲、手持武器。同时会破坏遇到的火把、灯笼、末地烛和海泡菜。</li>
 <li>骷髅：有更高的几率生成时身穿盔甲、射出药箭。</li>
 <li>爬行者：爆炸前的引线时间更短。高压爬行者有一定几率天然生成。</li>
 </ul>
@@ -528,7 +528,6 @@
 
 <h3 id="chicken_roost">鸡窝</h3>
 <p>鸡将要下蛋时会寻找附近的鸡窝，如果没有则会创建一个。鸡必须有鸡窝才能下蛋。鸡死亡后掉落<code>0~1+0.5×抢夺等级</code>个鸡蛋。</p>
-<!--<img style="height:250px" src="items/screenshots/chicken_roost.png" />-->
 
 <h3 id="fishing">钓鱼</h3>
 <p>有几率掉到宝藏珊瑚、珊瑚扇、湿海绵、鳕鱼头/鲑鱼头/热带鱼头/河豚头、<a href="#heart_of_ocean">水晶之心</a>和垃圾火药/海晶碎片。</p>
@@ -5080,7 +5079,7 @@
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-03-25</p>
+<p>最后更新 2019-03-26</p>
 </footer>
 </article>
 </body></html>
