--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。该模组无明确的主题，凡是作者认为原版没有而应该有的特性都有可能加入进来。</p>
-<p>最新版本为测试版v1.9-m03d26(魔法更新)，支持Minecraft Java版 1.14快照19w12a+。</p>
+<p>最新版本为测试版v1.9-m03d28(魔法更新)，支持Minecraft Java版 1.14快照19w12a+。</p>
 
 
 <h3 id="download">📦 下载地址</h3>
@@ -74,9 +74,9 @@
 <tbody>
 <tr>
 	<td>Minecraft Java版 19w12a+</td>
-	<td>Crafting++ 1.9测试版m03d26</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m03d26.zip">github</a>
-	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m03d26.zip">官方</a></td>
+	<td>Crafting++ 1.9测试版m03d28</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m03d28.zip">github</a>
+	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m03d28.zip">官方</a></td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/change.log">更新日志</a></td>
 </tr>
 <tr>
@@ -341,27 +341,27 @@
 
 <tr><th>药水</th><td>
   <a href="#cold_drink"><span class="ci" style="background-position: -128px -352px;"></span>冷饮</a> 
-· <a href="#potion_of_sky">天空药水</a>
-· <a href="#potion_of_ocean">海洋药水</a>
-· <a href="#potion_of_ridge">山脉药水</a>
-· <a href="#potion_of_dirt">泥土药水</a>
-· <a href="#potion_of_earth">大地药水</a>
-· <a href="#potion_of_fire">火焰药水</a>
-· <a href="#potion_of_life">生命药水</a>
-· <a href="#potion_of_slow_falling">缓降药水</a> 
-· <a href="#potion_of_night_vision">夜视药水</a> 
-· <a href="#potion_of_fire_resistance">抗火药水</a> 
-· <a href="#potion_of_water_breathing">水肺药水</a> 
-· <a href="#potion_of_invisibility">隐身药水</a> 
-· <a href="#potion_of_leaping">跳跃药水</a> 
-· <a href="#potion_of_swiftness">迅捷药水</a> 
-· <a href="#potion_of_strength">力量药水</a> 
-· <a href="#potion_of_regeneration">再生药水</a> 
-· <a href="#potion_of_healing">治疗药水</a> 
-· <a href="#potion_of_haste">急迫药水</a> 
-· <a href="#potion_of_resistance">抗性药水</a> 
-· <a href="#potion_of_tide">潮汐药水</a> 
-· <a href="#potion_of_chain">连环药水</a> 
+· <a href="#potion_of_sky"><span class="ci" style="background-position: -112px -624px;"></span><span class="ci" style="background-position: -128px -624px;"></span><span class="ci" style="background-position: -0px -640px;"></span>天空药水</a>
+· <a href="#potion_of_ocean"><span class="ci" style="background-position: -16px -640px;"></span><span class="ci" style="background-position: -32px -640px;"></span><span class="ci" style="background-position: -48px -640px;"></span>海洋药水</a>
+· <a href="#potion_of_ridge"><span class="ci" style="background-position: -64px -640px;"></span><span class="ci" style="background-position: -80px -640px;"></span><span class="ci" style="background-position: -96px -640px;"></span>山脉药水</a>
+· <a href="#potion_of_dirt"><span class="ci" style="background-position: -112px -640px;"></span>泥土药水</a>
+· <a href="#potion_of_earth"><span class="ci" style="background-position: -128px -640px;"></span><span class="ci" style="background-position: -0px -656px;"></span><span class="ci" style="background-position: -16px -656px;"></span>大地药水</a>
+· <a href="#potion_of_fire"><span class="ci" style="background-position: -32px -656px;"></span><span class="ci" style="background-position: -48px -656px;"></span><span class="ci" style="background-position: -64px -656px;"></span>火焰药水</a>
+· <a href="#potion_of_life"><span class="ci" style="background-position: -80px -656px;"></span><span class="ci" style="background-position: -96px -656px;"></span><span class="ci" style="background-position: -112px -656px;"></span>生命药水</a>
+· <a href="#potion_of_slow_falling"><span style="background-position: -32px -864px;"></span>缓降药水</a> 
+· <a href="#potion_of_night_vision"><span style="background-position: -16px -544px;"></span>夜视药水</a> 
+· <a href="#potion_of_fire_resistance"><span style="background-position: -448px -528px;"></span>抗火药水</a> 
+· <a href="#potion_of_water_breathing"><span style="background-position: -32px -672px;"></span>水肺药水</a> 
+· <a href="#potion_of_invisibility"><span style="background-position: -496px -528px;"></span>隐身药水</a> 
+· <a href="#potion_of_leaping"><span style="background-position: -0px -544px;"></span>跳跃药水</a> 
+· <a href="#potion_of_swiftness"><span style="background-position: -96px -544px;"></span>迅捷药水</a> 
+· <a href="#potion_of_strength"><span style="background-position: -80px -544px;"></span>力量药水</a> 
+· <a href="#potion_of_regeneration"><span style="background-position: -48px -544px;"></span>再生药水</a> 
+· <a href="#potion_of_healing"><span style="background-position: -480px -528px;"></span>治疗药水</a> 
+· <a href="#potion_of_haste"><span class="ci" style="background-position: -128px -656px;"></span>急迫药水</a> 
+· <a href="#potion_of_resistance"><span class="ci" style="background-position: -0px -672px;"></span>抗性药水</a> 
+· <a href="#potion_of_tide"><span class="ci" style="background-position: -16px -672px;"></span>潮汐药水</a> 
+· <a href="#potion_of_chain"><span class="ci" style="background-position: -32px -672px;"></span>连环药水</a> 
 </td></tr>
 
 
@@ -4728,6 +4728,8 @@
 <h2 id="block_sky_domain">空域开端</h2>
 <p>
 该数据包仅在出生点y=0处无基岩情形下启用，玩家可由自定义超平坦如<code>minecraft:air;minecraft:mountains;</code>进入。</p>
+<p>若要在非空岛模式下开启该模块，依次输入<code>/datapack enable "file/block_sky_domain"</code>和<code>scoreboard players set #load_block_sky_domain cppValue 1</code></p>
+<p>若要在空岛模式下关闭该模块，依次输入<code>/datapack disable "file/block_sky_domain"</code>和<code>scoreboard players set #load_block_sky_domain cppValue 0</code></p>
 <p>该数据包旨在为空岛玩家提供从泥土到末地的完整科技链。加载后会在海平面高度生成一块基岩和一个箱子，箱子内包含1泥土、1橡树树苗、16骨粉。</p>
 <p>玩家破坏树叶、草丛、枯萎的灌木、海草会掉落下述物品。</p>
 
@@ -5079,7 +5081,7 @@
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-03-26</p>
+<p>最后更新 2019-03-28</p>
 </footer>
 </article>
 </body></html>
