--- a/index.html
+++ b/index.html
@@ -73,11 +73,17 @@
 <table><thead><tr><th>支持的minecraft版本</th><th>Crafting++版本</th><th>下载地址</th><th>更新日志</th></tr></thead>
 <tbody>
 <tr>
+	<td>Minecraft Java版 1.14</td>
+	<td>Crafting++ 1.9</td>
+	<td>尚未发布</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/change.log">更新日志</a></td>
+</tr>
+<tr>
 	<td>Minecraft Java版 19w12a+</td>
 	<td>Crafting++ 1.9测试版m03d28</td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m03d28.zip">github</a>
 	  | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m03d28.zip">官方</a></td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/change.log">更新日志</a></td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/commit/04b75fd9d3df5fc2a84f4c36e158182592b720b7">更新日志</a></td>
 </tr>
 <tr>
 	<td>Minecraft Java版 1.13.1-1.13.2</td>
